--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".capitalize(\" \") # 'Art Vandelay'"
+    "\"art vandelay\".capitalize(\" ) # 'Art Vandelay'"
    ]
   },
   {
