--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".capitalize( ) # 'Art Vandelay'"
+    "\"art\".capitalize()+ vandelay\".capitalize( ) # 'Art Vandelay'"
    ]
   },
   {
