--- a/index.ipynb
+++ b/index.ipynb
@@ -189,22 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art\".capitalize()+ vandelay\".capitalize( ) # 'Art Vandelay'"
+    "\"art\".capitalize()+ \" \" + \"vandelay\".capitalize( ) # 'Art Vandelay'"
    ]
   },
   {
